--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ var legend2 = svg2.selectAll("g.legend2")
       .text("Percent of Education Attainment");
 
       svg3.append("g")
-         .attr("transform", "translate(" + (w3 - margin.left - 0.5) + ", " + margin.top + ")")
+         .attr("transform", "translate(" + (w3 - margin.right - 0.5) + ", " + margin.top + ")")
          .attr("class", "yaxis2")
          .call(yAxis2)
          .append("text")
